package airth;
 
// go use cc_generic_services option
option cc_generic_services = true;
 
message ArithRequest {
    optional int32 a = 1;
    optional int32 b = 2;
}
 
message ArithResponse {
    optional int32 val = 1;
    optional int32 quo = 2;
    optional int32 rem = 3;
}
 
service ArithService {
    rpc multiply (ArithRequest) returns (ArithResponse);
    rpc divide (ArithRequest) returns (ArithResponse);
}
